Add boot silencer script to force modem into flight mode at startup and update maintenance window duration

--- a/config/horus.conf
+++ b/config/horus.conf
@@ -4,6 +4,7 @@ PROJECT_NAME="Horus_Torino"
 
 # File Paths
 LOG_FILE="/home/horus/Horus/log/daily_log.txt"
+BOOT_LOG_FILE="/home/horus/Horus/log/boot_log.txt"
 APP_PATH="/home/horus/Horus/build/horus_app"
 DATA_DIR="/home/horus/DataCapture"
 
