Update cloud sync logic and maintenance window handling in daily routine script

--- a/config/horus.conf
+++ b/config/horus.conf
@@ -11,7 +11,11 @@ DATA_DIR="/home/horus/DataCapture"
 # Modem Settings
 USB_AT="/dev/ttyUSB2"
 
+# Maintenance Settings
+SSH_MAINTENANCE_TIME=30  # in minutes
+
 # Cloud Settings
-CLOUD_ENABLED="false"
-RCLONE_REMOTE="horus_s3"
-S3_BUCKET="YOUR_BUCKET_NAME"
+RCLONE_CONF="/home/horus/.config/rclone/rclone.conf"
+CLOUD_ENABLED="true"
+RCLONE_REMOTE="S3-Softfarm"
+S3_BUCKET="italy-tree-deployment-dev"
